--- a/rearranging-equations/qs.html
+++ b/rearranging-equations/qs.html
@@ -38,7 +38,6 @@
                 <!-- Question 1 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">1.</h3>
                         <p class="question-body-text">$x + y = 12$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -56,7 +55,6 @@
                 <!-- Question 2 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">2.</h3>
                         <p class="question-body-text">$5x - 4 = y$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -76,7 +74,6 @@
                 <!-- Question 3 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">3.</h3>
                         <p class="question-body-text">$ax - 3by = 9$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -96,7 +93,6 @@
                 <!-- Question 4 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">4.</h3>
                         <p class="question-body-text">$y = mx + c$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -116,7 +112,6 @@
                 <!-- Question 5 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">5.</h3>
                         <p class="question-body-text">$2 + 5xy = 6$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -137,7 +132,6 @@
                 <!-- Question 6 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">6.</h3>
                         <p class="question-body-text">$9x + 6y = 4x + 1$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -167,7 +161,6 @@
                 <!-- Question 7 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">7.</h3>
                         <p class="question-body-text">$ax + by = 4x + 1$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -191,7 +184,6 @@
                 <!-- Question 8 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">8.</h3>
                         <p class="question-body-text">$ax - by = bx - 8$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -215,7 +207,6 @@
                 <!-- Question 9 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">9.</h3>
                         <p class="question-body-text">$\dfrac{2ty + mx}{ty - mx} = 1$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -240,7 +231,6 @@
                 <!-- Question 10 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">10.</h3>
                         <p class="question-body-text">$\dfrac{ty + mx}{ty - 3mx} = k$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -269,7 +259,6 @@
                 <!-- Question 11 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">11.</h3>
                         <p class="question-body-text">$9x^2 = 4y$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -291,7 +280,6 @@
                 <!-- Question 12 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">12.</h3>
                         <p class="question-body-text">$x^3 - 5m = t$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -311,7 +299,6 @@
                 <!-- Question 13 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">13.</h3>
                         <p class="question-body-text">$x^2 - 2x = 15$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -342,7 +329,6 @@
                 <!-- Question 14 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">14.</h3>
                         <p class="question-body-text">$x^2 = 2 - qx$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -363,7 +349,6 @@
                 <!-- Question 15 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">15.</h3>
                         <p class="question-body-text">$x^2 - 8 = kx$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -422,7 +407,6 @@
                 <!-- Practice Problem 1 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">1.</h3>
                         <p class="question-body-text">$x^{\frac{3}{4}} = y^{\frac{1}{2}}$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -443,7 +427,6 @@
                 <!-- Practice Problem 2 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">2.</h3>
                         <p class="question-body-text">$x^{\frac{3}{4}} = y^{\frac{1}{2}} - 2$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -462,7 +445,6 @@
                 <!-- Practice Problem 3 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">3.</h3>
                         <p class="question-body-text">$5x^8 - y = 0$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -484,7 +466,6 @@
                 <!-- Practice Problem 4 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">4.</h3>
                         <p class="question-body-text">$x^{\frac{3}{4}} y = 8my$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -508,7 +489,6 @@
                 <!-- Practice Problem 5 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">5.</h3>
                         <p class="question-body-text">$2x^{2.5} = 64$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -533,7 +513,6 @@
                 <!-- Practice Problem 6 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">6.</h3>
                         <p class="question-body-text">$x^2 y^3 x^5 y^2 = a$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -556,7 +535,6 @@
                 <!-- Practice Problem 7 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">7.</h3>
                         <p class="question-body-text">$0.5 x^{-0.5} y^{-0.5} \times 0.5 x^{-0.5} y^{0.5} = 4$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -586,7 +564,6 @@
                 <!-- Practice Problem 8 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">8.</h3>
                         <p class="question-body-text">$0.8 y^{-0.2} x^{0.2} \times 0.2 y^{0.8} x^{-0.8} = 10$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -596,8 +573,7 @@
                             <div class="solution-content">
                                 <p>Group numerical coefficients and variables:</p>
                                 $$ (0.8 \times 0.2) \times (y^{-0.2} y^{0.8}) \times (x^{0.2} x^{-0.8}) = 10 $$
-                                $$ 0.16 \times y^{(-0.2) + (0.8)} \times x^{(0.2) + (-0.8)} = 10 $$
-                                $$ 0.16 y^{0.6} x^{-0.6} = 10 $$
+                                $$ 0.16 \times y^{0.6} \times x^{-0.6} = 10 $$
                                 $$ 0.16 y^{0.6} \frac{1}{x^{0.6}} = 10 $$
                                 $$ \frac{0.16 y^{0.6}}{x^{0.6}} = 10 $$
                                 <p>Multiply by $x^{0.6}$:</p>
@@ -618,7 +594,6 @@
                 <!-- Practice Problem 9 -->
                 <li>
                     <div class="question-block mb-8">
-                        <h3 class="text-xl font-semibold mb-2">9.</h3>
                         <p class="question-body-text">$\dfrac{\alpha y^{\alpha - 1} x^{\beta}}{\beta y^{\alpha} x^{\beta - 1}} = k$</p>
                         <div class="solution-container">
                             <div class="solution-header" onclick="toggleSolution(this)">
@@ -677,14 +652,17 @@
             // Adjust max-height for smooth transition
             if (content.classList.contains('expanded')) {
                 // When expanding, set max-height to its scrollHeight to reveal full content
-                content.style.maxHeight = content.scrollHeight + "px";
-                // IMPORTANT: Tell MathJax to typeset the content when it becomes visible
                 try {
                     if (typeof MathJax !== 'undefined') {
-                        MathJax.typesetPromise([content]);
+                        MathJax.typesetPromise([content]).then(() => {
+                            content.style.maxHeight = content.scrollHeight + "px";
+                        });
+                    } else {
+                        content.style.maxHeight = content.scrollHeight + "px"; // Fallback
                     }
                 } catch (error) {
                     console.error("MathJax typesetting error on expand:", error);
+                    content.style.maxHeight = content.scrollHeight + "px"; // Fallback
                 }
             } else {
                 // When collapsing, reset max-height to null (or 0)
