--- a/rearranging-equations/qs.html
+++ b/rearranging-equations/qs.html
@@ -21,12 +21,7 @@
 
     <!-- Main Content Container -->
     <div class="content-container">
-        <header class="text-center mb-10">
-            <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 leading-tight mb-2">
-                Rearranging Equations
-            </h1>
-            <p class="text-xl text-gray-600">LLE – Mathematics and Statistics | ECO-5007A</p>
-        </header>
+       <div id="header-placeholder"></div>
 
         <section class="mb-12">
             <h2 class="text-3xl font-bold section-title mb-6">
@@ -640,6 +635,25 @@
             }
         }
 
+        // Function to load the common header and set the specific page title
+async function loadHeader(pageTitle) {
+    try {
+        const response = await fetch('../assets/header.html');
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        const headerHtml = await response.text();
+        document.getElementById('header-placeholder').innerHTML = headerHtml;
+
+        const titleElement = document.getElementById('page-main-title');
+        if (titleElement) {
+            titleElement.textContent = pageTitle;
+        }
+    } catch (error) {
+        console.error("Failed to load header:", error);
+    }
+}
+        
         // This function handles the expand/collapse logic for solution sections
         function toggleSolution(header) {
             const content = header.nextElementSibling; // Get the content div immediately after the header
@@ -673,16 +687,19 @@
         // Initial MathJax typesetting for any math visible on page load (e.g., in questions)
         // Load navbar and then typeset MathJax after the DOM is fully loaded.
         document.addEventListener('DOMContentLoaded', function() {
-            loadNavbar().then(() => {
-                try {
-                    if (typeof MathJax !== 'undefined') {
-                        MathJax.typesetPromise();
-                    }
-                } catch (error) {
-                    console.error("MathJax initial typesetting error:", error);
+    loadNavbar().then(() => {
+        // Call loadHeader with the specific title for THIS page
+        loadHeader("Rearranging Equations").then(() => { // <--- CHANGE THIS LINE
+            try {
+                if (typeof MathJax !== 'undefined') {
+                    MathJax.typesetPromise();
                 }
-            });
+            } catch (error) {
+                console.error("MathJax initial typesetting error:", error);
+            }
         });
+    });
+});
     </script>
 
 </body>
