--- a/assets/header.html
+++ b/assets/header.html
@@ -3,5 +3,5 @@
     <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 leading-tight mb-2" id="page-main-title">
         <!-- Page title will be inserted here by JavaScript -->
     </h1>
-    <p class="text-xl text-gray-600">LLE – Mathematics and Statistics</p>
+    <p class="text-xl text-gray-600">UEA | LLE – Mathematics and Statistics | ECO-5007A</p>
 </header>
