--- a/differentiation-rules/qs.html
+++ b/differentiation-rules/qs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Differentiation Rules - ECO-5007A</title>
+    <title>Differentiation Rules</title>
     <!-- Font Awesome (for icons in navbar and solution toggles) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Link to your shared stylesheet (relative path from this folder) -->
