--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 leading-tight mb-2">
                 ECO-5007A: Intermediate Microeconomics
             </h1>
-            <p class="text-xl text-gray-600">By LET</p>
+            <p class="text-xl text-gray-600">Library & Learning Enhancement (LLE), Mathematics & Statistics</p>
         </header>
 
         <!-- Skills Workshops Section -->
