--- a/index.html
+++ b/index.html
@@ -96,11 +96,19 @@
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Topic 1: Marshallian Demand -->
-                <a href="marshallian-demand/qs.html" class="card">
+                <a href="marshallian-demand/md.html" class="card">
                     <i class="fas fa-chart-pie card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Marshallian Demand</h3>
                         <p class="text-gray-600 text-sm">Understand how consumers make choices to maximize utility given their budget, leading to the derivation of Marshallian demand functions.</p>
+                    </div>
+                </a>
+                <!-- Topic 2: Hicksian Demand -->
+                <a href="hicksian-demand/qs.html" class="card">
+                    <i class="fas fa-balance-scale card-icon"></i>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-1">Hicksian Demand</h3>
+                        <p class="text-gray-600 text-sm">Explore how consumers minimize expenditure to achieve a target utility level, leading to the derivation of Hicksian demand functions and the expenditure function.</p>
                     </div>
                 </a>
                 <!-- Add more subject-specific topics here as needed -->
