--- a/one-variable-optimisation/qs.html
+++ b/one-variable-optimisation/qs.html
@@ -426,18 +426,19 @@
                     </div>
                 </li>
             </ol>
+
+            <!-- Geogebra Calculator Embed - NOW CORRECTLY PLACED HERE -->
+            <div class="w-full h-[900px] mb-8 rounded-lg overflow-hidden shadow-md border border-gray-200">
+                <iframe src="https://www.geogebra.org/calculator" width="100%" height="100%" allowfullscreen style="border:0;"></iframe>
+            </div>
         </section>
+
 
         <section class="mb-12">
             <h2 class="text-3xl font-bold section-title mb-6">
                 Optimisation: Open-Top Box Problem
             </h2>
             <p class="mb-4">A box has a square base of dimensions $x \times x$ and height $y$. The box is open at the top.</p>
-
-            <!-- Geogebra Calculator Embed -->
-            <div class="w-full h-[600px] mb-8 rounded-lg overflow-hidden shadow-md border border-gray-200">
-                <iframe src="https://www.geogebra.org/calculator" width="100%" height="100%" allowfullscreen style="border:0;"></iframe>
-            </div>
 
             <ol>
                 <!-- Question 16 -->
