--- a/one-variable-optimisation/qs.html
+++ b/one-variable-optimisation/qs.html
@@ -427,8 +427,8 @@
                 </li>
             </ol>
 
-            <!-- Geogebra Calculator Embed - NOW CORRECTLY PLACED HERE -->
-            <div class="w-full h-[900px] mb-8 rounded-lg overflow-hidden shadow-md border border-gray-200">
+            <!-- Geogebra Calculator Embed - NOW CORRECTLY PLACED AND SIZED -->
+            <div class="w-full h-[1200px] mb-8 rounded-lg shadow-md border border-gray-200 overflow-y-auto">
                 <iframe src="https://www.geogebra.org/calculator" width="100%" height="100%" allowfullscreen style="border:0;"></iframe>
             </div>
         </section>
