--- a/one-variable-optimisation/qs.html
+++ b/one-variable-optimisation/qs.html
@@ -166,6 +166,16 @@
                 <li>Plot the functions using an online graphing tool (e.g. Desmos)</li>
             </ul>
 
+            <!-- Links to Graphing Calculators - NEW ADDITION -->
+            <div class="flex flex-col sm:flex-row gap-4 mb-8 justify-center">
+                <a href="https://www.desmos.com/calculator" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                    <i class="fas fa-chart-area mr-2"></i> Open Desmos Calculator
+                </a>
+                <a href="https://www.geogebra.org/calculator" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                    <i class="fas fa-square-root-alt mr-2"></i> Open Geogebra Calculator
+                </a>
+            </div>
+
             <h3 class="text-2xl font-semibold mb-4">Functions:</h3>
             <ol>
                 <!-- Question 7 -->
@@ -426,11 +436,6 @@
                     </div>
                 </li>
             </ol>
-
-            <!-- Geogebra Calculator Embed - NOW CORRECTLY PLACED AND SIZED -->
-            <div class="w-full h-[1200px] mb-8 rounded-lg shadow-md border border-gray-200 overflow-y-auto">
-                <iframe src="https://www.geogebra.org/calculator" width="100%" height="100%" allowfullscreen style="border:0;"></iframe>
-            </div>
         </section>
 
 
