--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Topic 1: Marshallian Demand -->
-                <a href="marshallian-demand/md.html" class="card">
+                <a href="marshallian-demand/qs.html" class="card">
                     <i class="fas fa-chart-pie card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Marshallian Demand</h3>
@@ -124,3 +124,4 @@
 
 </body>
 </html>
+
