--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
             transition: background-color 0.3s ease;
         }
         .home-link:hover {
-            background-color: #3a8f72;
+            background-color: #d4f5ff;
         }
     </style>
 </head>
@@ -61,7 +61,7 @@
         <span class="emoji-graphic">🚧</span>
         <h1>This Page Is Under Construction!</h1>
         <p>Working hard to bring you this content. Please check back soon!</p>
-        <a href="/pha-4010y/index.html" class="home-link">Go to Homepage</a>
+        <a href="/eco-5007a/index.html" class="home-link">Go to Homepage</a>
     </div>
 </body>
 </html>
