--- a/index.html
+++ b/index.html
@@ -111,7 +111,14 @@
                         <p class="text-gray-600 text-sm">Explore how consumers minimize expenditure to achieve a target utility level, leading to the derivation of Hicksian demand functions and the expenditure function.</p>
                     </div>
                 </a>
-                <!-- Add more subject-specific topics here as needed -->
+                <!-- Topic 3: Expected Values -->
+                <a href="expected-value-utility/qs.html" class="card">
+                    <i class="fas fa-dice card-icon"></i>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-1">Expected Value and Utility Maximisation</h3>
+                        <p class="text-gray-600 text-sm">Discover how to find the optimal choice by weighing the probabilities and outcomes of ventures, using expected value and individual utility functions to maximise satisfaction.</p>
+                    </div>
+                </a>
             </div>
         </section>
 
@@ -124,4 +131,5 @@
 
 </body>
 </html>
+
 
