--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                     </div>
                 </a>
                 <!-- Topic 3: Expected Values -->
-                <a href="expected-value-utility/qs.html" class="card">
+                <a href="expected-utility/qs.html" class="card">
                     <i class="fas fa-dice card-icon"></i>
                     <div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-1">Expected Value and Utility Maximisation</h3>
-                        <p class="text-gray-600 text-sm">Discover how to find the optimal choice by weighing the probabilities and outcomes of ventures, using expected value and individual utility functions to maximise satisfaction.</p>
+                        <p class="text-gray-600 text-sm">Find the optimal choice by weighing the probabilities and outcomes of ventures, using expected value and individual utility functions to maximise satisfaction.</p>
                     </div>
                 </a>
             </div>
@@ -131,5 +131,6 @@
 
 </body>
 </html>
+
 
 
